--- a/cod-sursa/frontend/src/assets/i18n/en.json
+++ b/cod-sursa/frontend/src/assets/i18n/en.json
@@ -1,3 +1,12 @@
 {
-  "avizari-maritime": "Maritime notices"
+  "meniu": {
+    "avizari-maritime": "Maritime notices",
+    "buletine-pilotaj": "Maritime pilotage bulletins"
+  },
+  "avm": {
+    "avm-lista": "List of maritime notices"
+  },
+  "bp": {
+    "bp-lista": "List of maritime pilotage bulletins"
+  }
 }
