Lucru la avizare si la vizualizare avizare maritima fe

--- a/cod-sursa/frontend/src/assets/i18n/en.json
+++ b/cod-sursa/frontend/src/assets/i18n/en.json
@@ -9,12 +9,25 @@
     "titlu-informare": "Information",
     "mesaj-op-succes": "The operation was successful.",
     "titlu-eroare": "Error",
-    "formular-invalid": "The form is invalid. Complete the fields."
+    "formular-invalid": "The form is invalid. Complete the fields.",
+    "eroare-respingere": "On rejection observations field is mandatory",
+    "vizualizare": "Visualize details",
+    "avizeaza": "Approve",
+    "editeaza": "Edit",
+    "inapoi": "Back to list",
+    "observations": "Observations",
+    "alege-rezolutie": "Chose resolution",
+    "aproba": "Approve",
+    "respinge": "Reject"
   },
   "avm": {
+    "resolutie-avizare": "Maritime notice resolution",
     "adauga-marfa": "Add cargo",
     "sterge-marfa": "Delete cargo",
+    "marfa": "Cargo",
+    "cantitate": "Quantityy",
     "marfa-declarata": "Declared cargo",
+    "vizualizare-avizare": "Maritime notice visualization",
     "anuleaza": "Cancel",
     "salveaza": "Save",
     "avm-lista": "List of maritime notices",
@@ -28,8 +41,8 @@
     "introduceti-cantitatea": "Introduce quantity",
     "status": "Status",
     "status-0": "Awaiting approval",
-    "status-1": "Aproved by ANR",
-    "status-2": "Aproved by ANR and APMC",
+    "status-1": "Approved by ANR",
+    "status-2": "Approved by ANR and APMC",
     "status-3": "Rejected",
     "status-4": "Canceled"
   },
