--- a/cod-sursa/frontend/src/assets/i18n/ro.json
+++ b/cod-sursa/frontend/src/assets/i18n/ro.json
@@ -9,12 +9,25 @@
     "titlu-informare": "Informare",
     "mesaj-op-succes": "Operația a fost efectuată cu succes.",
     "titlu-eroare": "Eroare",
-    "formular-invalid": "Formularul este invalid. Completați câmpurile conform indicaților"
+    "formular-invalid": "Formularul este invalid. Completați câmpurile conform indicaților",
+    "eroare-respingere": "La respingere câmpul observații este obligatoriu",
+    "vizualizare": "Vezi detalii",
+    "avizeaza": "Avizează",
+    "editeaza": "Editează",
+    "inapoi": "Înapoi la listă",
+    "observations": "Observații",
+    "alege-rezolutie": "Alege rezoluția",
+    "aproba": "Aprobă",
+    "respinge": "Respinge"
   },
   "avm": {
+    "resolutie-avizare": "Rezoluție avizare maritimă",
     "adauga-marfa": "Adaugă marfă",
     "sterge-marfa": "Sterge marfa",
+    "marfa": "Marfă",
+    "cantitate": "Cantitate",
     "marfa-declarata": "Marfă declarată",
+    "vizualizare-avizare": "Vizualizare avizare maritimă",
     "anuleaza": "Anulează",
     "salveaza": "Salvează",
     "avm-lista": "Listă de avizări maritime",
