Configurare angular guard Adaugare username, buton logout si buton edit avizari maritime

--- a/cod-sursa/frontend/src/assets/i18n/en.json
+++ b/cod-sursa/frontend/src/assets/i18n/en.json
@@ -18,7 +18,8 @@
     "observations": "Observations",
     "alege-rezolutie": "Chose resolution",
     "aproba": "Approve",
-    "respinge": "Reject"
+    "respinge": "Reject",
+    "logout": "Logout"
   },
   "avm": {
     "resolutie-avizare": "Maritime notice resolution",
