--- a/cod-sursa/frontend/src/assets/i18n/ro.json
+++ b/cod-sursa/frontend/src/assets/i18n/ro.json
@@ -18,7 +18,8 @@
     "observations": "Observații",
     "alege-rezolutie": "Alege rezoluția",
     "aproba": "Aprobă",
-    "respinge": "Respinge"
+    "respinge": "Respinge",
+    "logout": "Deconectare"
   },
   "avm": {
     "resolutie-avizare": "Rezoluție avizare maritimă",
