Lucru la formular cautare avizare maritima

--- a/cod-sursa/frontend/src/assets/i18n/en.json
+++ b/cod-sursa/frontend/src/assets/i18n/en.json
@@ -15,6 +15,7 @@
     "avizeaza": "Approve",
     "editeaza": "Edit",
     "anuleaza": "Cancel",
+    "cauta": "Search",
     "inapoi": "Back to list",
     "observations": "Observations",
     "alege-rezolutie": "Chose resolution",
