--- a/cod-sursa/frontend/src/assets/i18n/ro.json
+++ b/cod-sursa/frontend/src/assets/i18n/ro.json
@@ -15,6 +15,7 @@
     "avizeaza": "Avizează",
     "editeaza": "Editează",
     "anuleaza": "Anulează",
+    "cauta": "Caută",
     "inapoi": "Înapoi la listă",
     "observations": "Observații",
     "alege-rezolutie": "Alege rezoluția",
