--- a/cod-sursa/backend/todo.txt
+++ b/cod-sursa/backend/todo.txt
@@ -1,3 +1,3 @@
 - diagrame de stare pentru avizare maritima, escala, buletin de pilotaj
 
-- forma de cautare dupa document status
+- deasupra fiecarei liste se va afisa cu small: Se afiseaza primele 100 de inregistrari. Daca nu gasiti inregistrarea cautata folositi forma de cautare.
