Lucru la adaugare buletin de pilotaj

--- a/cod-sursa/frontend/src/assets/i18n/en.json
+++ b/cod-sursa/frontend/src/assets/i18n/en.json
@@ -55,6 +55,7 @@
     "est": "Estimated time",
     "agent": "Agent",
     "pilotaj": "Pilotage",
+    "operator-cargo": "Cargo operator",
     "nava": "Ship",
     "loc-start": "From",
     "loc-stop": "To",
