--- a/cod-sursa/frontend/src/assets/i18n/ro.json
+++ b/cod-sursa/frontend/src/assets/i18n/ro.json
@@ -55,6 +55,7 @@
     "est": "Dată estimată",
     "agent": "Agent",
     "pilotaj": "Pilotaj",
+    "operator-cargo": "Operator cargo",
     "nava": "Navă",
     "loc-start": "De la",
     "loc-stop": "Până la",
